# Manuel

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/services/: autostart.rs  engine.rs  hid.rs  keyboard.rs  macro_runner.rs  mod.rs  recorder.rs  storage.rs  textmap.rs  window.rs  ydotoold.rs
src/assets/: style.css
src/components/: InputRecorder.vue  MappingRow.vue
src/pages/: Devices.vue  Mappings.vue  Settings.vue
src/router/: index.js
src/services/: tauri.js
src/stores/: devices.js  mappings.js  settings.js
