[package]
name = "manuel"
version = "0.1.0"
description = "Manuel — lightweight input mapper for Ubuntu"
authors = ["Jorge"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "manuel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# Linux input
evdev = "0.12"
libc = "0.2"
xkbcommon = "0.7"
unicode-normalization = "0.1"

# Output emission (X11; on Wayland we fall back to uinput via evdev write)
enigo = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
